# Passa

./: .env.bak  .env.example  .eslintrc.js  .gitignore  ATTRIBUTION.md  BLOCKCHAIN_PAYMENT_INTEGRATION.md  DESIGN_SYSTEM.md  FEATURES.md  INVITATION_WORKFLOW.md  POSTGRES_SETUP.md  PR_EVENT_WORKFLOW.md  README.md  RUST_TYPESCRIPT_INTEGRATION.md  SECTION_IMPROVEMENTS.md  SMART_CONTRACT_IMPLEMENTATION_ANALYSIS.md  SMART_CONTRACT_WORKFLOW.md  STELLAR_EVENTS_IMPLEMENTATION.md  STYLING_IMPROVEMENTS.md  STYLING_IMPROVEMENTS_SUMMARY.md  diagnose-signup-issue.ts  docker-compose.yml  fix-eslint.sh  next.config.ts  package-lock.json  package.json  setup.sh  simple-setup.sh  stellar_events_design_system.md  tailwind.config.ts  tsconfig.json  vite.config.ts
backend/: .eslintrc.js  DATABASE_SCHEMA.md  Dockerfile  IMPLEMENTATION_STATUS.md  fix-permissions.js  jest.config.js  knexfile.ts  package.json  test-db-connection.js  test-user-model.js  tsconfig.json
contracts/: Cargo.toml  package.json
docs/: ARTIST_ONBOARDING_WORKFLOW.md  DATABASE.md  DESIGN_SYSTEM.md  EVENT_WORKFLOW.md  INVITATION_WORKFLOW.md  NAVIGATION_UPDATE.md  SMART_CONTRACTS.md  blueprint.md  structure.html
frontend/: .eslintrc.cjs  Dockerfile  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
passa-contracts/: .gitignore  README.md
prisma/: schema.prisma  seed.js
scripts/: README.md  create-github-issues.js  create-issues.sh  deploy-contracts.sh  setup-platform-wallet.js  setup-platform-wallet.ts  setup.sh  test-contracts.sh
shared/: package.json  tsconfig.json
src/: FEATURES.md  (+1 more)
(+291 files in other folders)
